# Machine-test

./: CMakeLists.txt  README.md  main.cpp
src/: _nextday.cpp  demo.cpp  demo_0100.cpp  demo_0101.cpp  demo_0102.cpp  demo_0103.cpp  demo_0104.cpp  demo_0200.cpp  demo_0202.cpp  demo_0203.cpp  demo_0204.cpp  demo_0205.cpp  demo_0206.cpp  demo_0207.cpp  demo_0300.cpp  demo_0301.cpp  demo_0302.cpp  demo_0303.cpp  demo_0304.cpp  demo_0305.cpp  demo_0400.cpp  demo_0401.cpp  demo_0402.cpp  demo_0500.cpp  demo_0501.cpp  demo_0502.cpp  demo_0503.cpp  exercise_0100.cpp  exercise_0101.cpp  exercise_0102.cpp  exercise_0103.cpp  exercise_0104.cpp  exercise_0105.cpp  exercise_0106.cpp  exercise_0107.cpp  exercise_0108.cpp  exercise_0110.cpp  exercise_0111.cpp  exercise_0112.cpp  exercise_0200.cpp  (+14 more)
