cmake_minimum_required(VERSION 3.28)
project(Machine_test)

set(CMAKE_CXX_STANDARD 14)

add_executable(Machine_test main.cpp)
add_executable(demo src/demo.cpp)
add_executable(demo_0100 src/demo_0100.cpp)
add_executable(demo_0101 src/demo_0101.cpp)
add_executable(exercise_0100 src/exercise_0100.cpp)
add_executable(exercise_0101 src/exercise_0101.cpp)
add_executable(exercise_0102 src/exercise_0102.cpp)
add_executable(exercise_0103 src/exercise_0103.cpp)
add_executable(exercise_0104 src/exercise_0104.cpp)
add_executable(demo_0102 src/demo_0102.cpp)