cmake_minimum_required(VERSION 3.28)
project(Machine_test)

set(CMAKE_CXX_STANDARD 14)

add_executable(Machine_test main.cpp)
add_executable(demo src/demo.cpp)
add_executable(demo_0100 src/demo_0100.cpp)
add_executable(demo_0101 src/demo_0101.cpp)
add_executable(exercise_0100 src/exercise_0100.cpp)
add_executable(exercise_0101 src/exercise_0101.cpp)
add_executable(exercise_0102 src/exercise_0102.cpp)
add_executable(exercise_0103 src/exercise_0103.cpp)
add_executable(exercise_0104 src/exercise_0104.cpp)
add_executable(demo_0102 src/demo_0102.cpp)
add_executable(exercise_0105 src/exercise_0105.cpp)
add_executable(exercise_0106 src/exercise_0106.cpp)
add_executable(exercise_0107 src/exercise_0107.cpp)
add_executable(exercise_0108 src/exercise_0108.cpp)
add_executable(demo_0103 src/demo_0103.cpp)
add_executable(demo_0104 src/demo_0104.cpp)
add_executable(exercise_0110 src/exercise_0110.cpp)
add_executable(exercise_0111 src/exercise_0111.cpp)
add_executable(exercise_0112 src/exercise_0112.cpp)
add_executable(_nextday src/_nextday.cpp)
add_executable(demo_0200 src/demo_0200.cpp)
add_executable(demo_0201 src/demo_0201.cpp)
add_executable(demo_0202 src/demo_0202.cpp)
add_executable(exercise_0200 src/exercise_0200.cpp)
add_executable(exercise_0201 src/exercise_0201.cpp)
add_executable(exercise_0202 src/exercise_0202.cpp)
add_executable(use_vector src/use_vector.cpp)
add_executable(use_list src/use_list.cpp)
add_executable(demo_0203 src/demo_0203.cpp)
add_executable(demo_0204 src/demo_0204.cpp)
add_executable(demo_0205 src/demo_0205.cpp)
add_executable(exercise_0203 src/exercise_0203.cpp)
add_executable(exercise_0204 src/exercise_0204.cpp)
add_executable(exercise_0205 src/exercise_0205.cpp)
add_executable(exercise_0206 src/exercise_0206.cpp)